--- a/api-server/demo/src/main/resources/templates/index.html
+++ b/api-server/demo/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
 
 		<div class="box">
 			<div style="font-size: 22px">
-				<a href="https://github.com/team-bB" target="_blank"> 동마담 앱 다운로드  </a>
+				<a href="https://apps.apple.com/kr/app/%EB%8F%99%EB%A7%88%EB%8B%B4/id1570634413" target="_blank"> 동마담 앱 다운로드  </a>
 			</div>
 		</div>
 	</div>
